added comments and fixed spacing

--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,5 @@
+/* ================================= UNIVERSAL =================================*/
+
 * {
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
