changed button hover color

--- a/public/new-dream.css
+++ b/public/new-dream.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
+  color: #333333;
 }
 
 body {
@@ -234,7 +235,7 @@ textarea {
 }
 
 .publish:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #008cff;
   cursor: pointer;
 }
 
