--- a/public/dreams.css
+++ b/public/dreams.css
@@ -8,6 +8,10 @@ body {
 	background-color: #f2f2f2;
 }
 
+.remove {
+  display: none;
+}
+
 /*=============================== NAV BAR ============================= */
 
 nav {
@@ -232,9 +236,9 @@ blockquote cite:before {
 	border-radius: 4px;
 }
 
-.edit-button, .delete-button {
+.edit-button {
 	text-decoration: none;
-  background-color: #cecece;
+  /*background-color: #cecece;*/
 	padding: 3px 10px;
 	border-radius: 3px;
   -webkit-transition: all .2s ease;
@@ -246,12 +250,27 @@ blockquote cite:before {
 }
 
 .edit-button:hover {
-	background-color: #2699ff;
+	background-color: #82d1ff;
+  cursor: pointer;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.delete-button {
+  text-decoration: none;
+  /*background-color: #cecece;*/
+  padding: 3px 3px;
+  border-radius: 3px;
+  -webkit-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -o-transition: all .2s ease;
+  transition: all .2s ease;
+  font-weight: bolder;
 }
 
 .delete-button:hover {
   background-color: #ff7aa4;
+  cursor: pointer;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -288,10 +307,18 @@ blockquote cite:before {
     width: 50%;
     margin: 9px 0;
   }
+
+  .delete-button {
+
+  }
 }
 
 @media only screen and (max-width: 475px) {
   .dream-info {
     width: 100%;
+  }
+
+  .delete-button {
+
   }
 }
